# flashsieve

./: AUDIT_FINDINGS_FLASHSIEVE.md  AUDIT_REPORT_BLOOM_PREFILTER.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_AUDIT_REPORT.md  POST_JULES_AUDIT_FINDINGS.md  README.md  generate_tests.py  patch_bloom.sh  test_prefetch
.github/workflows/: ci.yml
benches/: filter_throughput.rs  legendary_bench.rs
examples/: debug.rs  debug_boundary.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bloom_from_raw.rs  fuzz_builder.rs  fuzz_deserialize.rs  fuzz_insert_query.rs  fuzz_mmap_index.rs
src/: builder.rs  error.rs  file_bloom_index.rs  filter.rs  histogram.rs  incremental.rs  incremental_watch.rs  lib.rs  mmap_index.rs  mmap_query.rs  mmap_write.rs  transport.rs
src/bloom/: builder.rs  filter.rs  hash.rs  mod.rs  query.rs  serde.rs
src/index/: codec.rs  mod.rs  query.rs
src/mmap_index/: mod.rs  query.rs  tests.rs  views.rs
tests/: adversarial_bloom.rs  adversarial_bloom_correctness.rs  adversarial_bloom_critical.rs  adversarial_exact_pairs_boundary.rs  adversarial_exhaustive.rs  adversarial_fpr_extreme.rs  adversarial_inputs.rs  adversarial_inputs.rs.orig  adversarial_suite.rs  audit_break_it.rs  bloom_accuracy.rs  concurrent_suite.rs  correctness_guarantees.rs  crash_suite.rs  edge_cases.rs  end_to_end.rs  gap_fpr.rs  incremental.rs  integration_suite.rs  internet_scale.rs  legendary.rs  legendary_proptest.rs  persistence_roundtrip.rs  proptest_invariants.rs  regression_suite.rs  scale_suite.rs  structural_suite.rs  test_blocked_bloom.rs  test_legendary_gap.rs  test_legendary_property.rs  test_legendary_unit.rs  transport_adversarial.rs  unit_suite.rs
tests/adversarial/: adversarial_bloom.rs  adversarial_bloom_correctness.rs  adversarial_bloom_critical.rs  adversarial_exact_pairs_boundary.rs  adversarial_exhaustive.rs  adversarial_fpr_extreme.rs  adversarial_inputs.rs  adversarial_suite.rs  audit_break_it.rs  bloom_collisions.rs  break_it.rs  concurrent_100_threads.rs  hash_distribution.rs  impossible_conditions.rs  memory_sizing.rs  mod.rs  test_legendary_adversarial.rs  transport_adversarial.rs
tests/adversarial/boundary/: mod.rs
tests/adversarial/injection/: mod.rs
tests/adversarial/malformed/: mod.rs
tests/adversarial/overflow/: mod.rs
tests/adversarial/resource/: mod.rs
tests/adversarial/unicode/: mod.rs
tests/break_it/: bloom_fp_rate.rs  edge_cases.rs  mod.rs
tests/concurrent/: mod.rs
tests/concurrent/contention/: mod.rs
tests/concurrent/deadlock/: mod.rs
tests/concurrent/multi_writer/: mod.rs
tests/concurrent/reader_writer/: mod.rs
tests/concurrent/stress/: mod.rs
tests/crash/: mod.rs  random_corruption.rs
tests/crash/concurrent/: mod.rs
tests/crash/corruption/: mod.rs
tests/crash/partial_write/: mod.rs
tests/crash/power_failure/: mod.rs
tests/integration/: integration_suite.rs  mod.rs
tests/property/: mod.rs  property_suite.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  test_legendary_property.rs  zero_fnr.rs
tests/regression/: adversarial_audit.rs  false_negatives.rs  histogram_overflow.rs  mod.rs
tests/scale/: internet_scale.rs  mod.rs
tests/structural/: bloom_adversarial.rs  bloom_saturation.rs  builder_invariants.rs  filter_correctness.rs  histogram_adversarial.rs  mod.rs
tests/unit/: blocked_bloom.rs  bloom.rs  bloom_accuracy.rs  builder.rs  concurrent_suite.rs  crash_suite.rs  edge_cases.rs  end_to_end.rs  file_bloom_incremental.rs  file_bloom_index.rs  filter.rs  gap_fpr.rs  histogram.rs  incremental.rs  incremental_root_level.rs  mmap_index.rs  mod.rs  oom_test.rs  persistence_roundtrip.rs  regression_suite.rs  scale_suite.rs  structural_suite.rs  test_blocked_bloom.rs  test_legendary_gap.rs  test_legendary_unit.rs  unit_suite.rs
