[workspace]

[package]
name = "flashsieve-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
repository = "https://github.com/santhsecurity/Santh"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
flashsieve = { path = ".." }

[[bin]]
name = "fuzz_deserialize"
path = "fuzz_targets/fuzz_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bloom_from_raw"
path = "fuzz_targets/fuzz_bloom_from_raw.rs"
test = false
doc = false

[[bin]]
name = "fuzz_builder"
path = "fuzz_targets/fuzz_builder.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mmap_index"
path = "fuzz_targets/fuzz_mmap_index.rs"
test = false
doc = false

[[bin]]
name = "fuzz_insert_query"
path = "fuzz_targets/fuzz_insert_query.rs"
test = false
doc = false